comments / edits in 3.1

--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -38,11 +38,10 @@
 \lstdefinelanguage{json}{
     numbers=left,
     numberstyle=\scriptsize,
-    basicstyle=\color{black}\ttfamily\scriptsize,
     stepnumber=1,
     showstringspaces=false,
     breaklines=true,
-    frame=single,
+    frame=lines,
     literate=
      *{0}{{{\color{numb}0}}}{1}
       {1}{{{\color{numb}1}}}{1}
@@ -104,18 +103,18 @@
 \lstdefinelanguage{JavaScript}{
   sensitive=true,
   keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, for},
-  keywordstyle=\color{blue}\ttfamily,
+  basicstyle=\color{black}\texttt\small,
+  keywordstyle=\color{blue}\texttt,
   ndkeywords={class, export, boolean, throw, implements, import, this},
-  ndkeywordstyle=\color{darkgray}\ttfamily,
+  ndkeywordstyle=\color{darkgray}\texttt,
   identifierstyle=\color{black},
   comment=[l]{//},
   morecomment=[s]{/*}{*/},
-  commentstyle=\color{purple}\ttfamily,
-  stringstyle=\color{red}\ttfamily,
-  basicstyle=\color{black}\ttfamily\scriptsize,
+  commentstyle=\color{purple}\texttt,
+  stringstyle=\color{red}\texttt,
   %morestring=[b]',
   numbers=left,
-  numberstyle=\scriptsize,
+  numberstyle=\small,
   stepnumber=1,
   showstringspaces=false,
   breaklines=true,
@@ -211,8 +210,7 @@
   morecomment=[l]{//},
   morecomment=[s]{/*}{*/},
   morecomment=[l][keywordstyle4]{\#},
-  keywordstyle=\color{blue}\ttfamily,
-  basicstyle=\color{black}\ttfamily\scriptsize,
+  keywordstyle=\color{blue}\texttt,
   numbers=left,
   numberstyle=\scriptsize,
   stepnumber=1,
