--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -135,10 +135,10 @@ Auch hier ist eine Aufteilung des Bildschirmes möglich um Bilder aus einer Seri
 %----------------------------------------------
 \subsection{Vergleich der Betrachtungstools}
 \label{sec:Vergleich der Betrachtungstools}
-Die Funktionen zur Interaktion mit den Bilddaten sind bei den beiden erwähnten Software-Produkten sehr ähnlich \C{und von der Bedienung bis auf kleine Unterschide gleich umgesetzt.
-So zeigt OsiriX Beispielsweise an wenn das Bild über das Betrachtungsfenster hinaus geht.}
+Die Funktionen zur Interaktion mit den Bilddaten sind bei den beiden erwähnten Software-Produkten sehr ähnlich und von der Bedienung bis auf kleine Unterschide gleich umgesetzt.
+So zeigt OsiriX Beispielsweise an wenn das Bild über das Betrachtungsfenster hinaus geht.
 Osirix hat einige Features wie 3D-Rendering welche zwar für die Forschung interessant sind, für die medizinische Befundung aber keine größere Rolle spielen.
 Funktionen zum Durchsuchen der Datensätze anhand einer Bild-Query weisen beide Produkte nicht auf.
-\Rc{bei annähernd und grössere wird sich robert melden - versuchs ohne zu formulieren, konkreter zu machen.}
+
 
 
