--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -292,6 +292,13 @@
 \tableofcontents
 % put your abstract here
 \abstract{
+Diese Arbeit behandelt die Entwicklung einer Benutzeroberfläche für eine Bildsuchmaschiene zum Durchsuchen von Bildern aus radiologischen bildgebenden Verfahren für 2D und 3D als Web-Applikation.
+Die Benutzeroberfläche dient als Frontend für die Radiologie-Suche des KRESHMOI-Systems.
+
+Im Rahmen der Arbeit wird die Funktionalität von den beiden Betrachtungsprogrammen für radiologische Datensätze OsiriX und Afga Impax DS3000 analysiert.
+
+Es wird der Funktionsumfang des entwickelten Betrachters sowie die Tools zum erstellen der Bild-Query und zur Präsentation der Ergebnisse beschrieben.
+Weiters wird erklärt wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ansätze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben.
 }
 \clearpage
 \pagenumbering{arabic}
