--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -224,6 +224,14 @@ Um ein Suchergebniss im Vorfeld zu Beurteilen verfügt die Ergebnis-List ebenfal
 %----------------------------------------------
 \subsection{Technische Umsetzung}
 \label{sec:Technische Umsetzung}
+In dem Unterkapitel Technische Umsetzung wird im Groben die Archtiktur der Applikation sowie von komplexeren Komponenten erklärt und auf wichtige Details bei deren Umsetzung eingegangen.
+Weiters wird angegeben wie die Fensterung mit zwei verschidenen Technologie implementiert wurde.
+
+%----------------------------------------------
+% ** Umsetzung der dynamischen Layouts
+%----------------------------------------------
+\subsubsection{Framework für dynamischen Layouts}
+\label{sec:Umsetzung der dynamischen Layouts}
 
 %----------------------------------------------
 % ** Berehnung der Fensterung
@@ -370,8 +378,6 @@ Die Betrachter-Klasse selbst ist hauptsächlich für die Erstelltung der Bediene
 	\label{fig:omip_aplication_layout}
 \end{figure}
 
-
-
 %----------------------------------------------
 % * Kommunikation mit KRESHMOI
 %----------------------------------------------
@@ -470,16 +476,3 @@ Beispiel:
 %TODO: Zitieren von KRESHMOI API
 %TODO: Zitieren der Schnittebenen
 %TODO: Bild ist wikipedia ok: http://de.wikipedia.org/wiki/Anatomische_Lage-_und_Richtungsbezeichnungen
-
-%----------------------------------------------
-% * Usability
-%----------------------------------------------
-\subsection{Usability}
-\label{sec:Usability}
-
-%----------------------------------------------
-% ** Workflow bei der Befundung
-%----------------------------------------------
-\subsubsection{Workflow bei der Befundung}
-\label{sec:Workflow bei der Befundung}
-
