Abstract bugs gefixed

--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -22,6 +22,7 @@
 \usepackage{graphicx}
 \usepackage[noindentafter]{titlesec}
 % \usepackage[ansinew]{inputenc}      % ---> für umlaute in deutschen references
+\usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} 
 \usepackage[printonlyused]{acronym}	% acronyms
@@ -290,13 +291,13 @@
 \tableofcontents
 % put your abstract here
 \abstract{
-Diese Arbeit behandelt die Entwicklung einer Benutzeroberfläche für eine Bildsuchmaschiene zum Durchsuchen von Bildern aus radiologischen bildgebenden Verfahren für 2D und 3D als Web-Applikation.
-Die Benutzeroberfläche dient als Frontend für die Radiologie-Suche des KRESHMOI-Systems.
+Diese Arbeit behandelt die Entwicklung einer Benutzeroberfl"ache f"ur eine Bildsuchmaschiene zum Durchsuchen von Bildern aus radiologischen bildgebenden Verfahren f"ur 2D und 3D als Web-Applikation.
+Die Benutzeroberfl"ache dient als Frontend f"ur die Radiologie-Suche des KRESHMOI-Systems.
 
-Im Rahmen der Arbeit werden die beiden Betrachtungsprogrammen für radiologische Datensätze OsiriX und Afga Impax DS3000 im Bezug auf Funktionsumfang und Bedienung analysiert.
+Im Rahmen der Arbeit werden die beiden Betrachtungsprogrammen f"ur radiologische Datens"atze OsiriX und Afga Impax DS3000 im Bezug auf Funktionsumfang und Bedienung analysiert.
 
-Es wird der Funktionsumfang des entwickelten Betrachters sowie die Tools zum erstellen der Bild-Query und zur Präsentation der Ergebnisse beschrieben.
-Weiters wird erklärt wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ansätze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben.
+Es wird der Funktionsumfang des entwickelten Betrachters sowie die Tools zum erstellen der Bild-Query und zur Pr"asentation der Ergebnisse beschrieben.
+Weiters wird erkl"art wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ans"atze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben.
 }
 \clearpage
 \pagenumbering{arabic}
