--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -297,7 +297,9 @@ Die Benutzeroberfl"ache dient als Frontend f"ur die Radiologie-Suche des KRESHMO
 Im Rahmen der Arbeit werden die beiden Betrachtungsprogrammen f"ur radiologische Datens"atze OsiriX und Afga Impax DS3000 im Bezug auf Funktionsumfang und Bedienung analysiert.
 
 Es wird der Funktionsumfang des entwickelten Betrachters sowie die Tools zum erstellen der Bild-Query und zur Pr"asentation der Ergebnisse beschrieben.
-Weiters wird erkl"art wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ans"atze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben.
+Weiters wird erkl"art wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ans"atze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben und im Bezug auf ihre Performance getestet.
+
+Von den beiden Verfahren f"uhrte nur das rendering mit WebGL zu einem ausreichend schnellen Ergebniss, welches auch im entwickelten Betrachter implementiert wurde.
 }
 \clearpage
 \pagenumbering{arabic}
