--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -291,15 +291,15 @@
 \tableofcontents
 % put your abstract here
 \abstract{
-Diese Arbeit behandelt die Entwicklung einer Benutzeroberfl"ache f"ur eine Bildsuchmaschiene zum Durchsuchen von Bildern aus radiologischen bildgebenden Verfahren f"ur 2D und 3D als Web-Applikation.
-Die Benutzeroberfl"ache dient als Frontend f"ur die Radiologie-Suche des KRESHMOI-Systems.
+Diese Arbeit behandelt die Entwicklung einer \R{Web-}Benutzeroberfl"ache f"ur eine Bildsuchmaschiene zum Durchsuchen von \R{3D-Daten}\Rd{Bildern} aus radiologischen bildgebenden Verfahren\Rd{ f"ur 2D und 3D als Web-Applikation}.
+\Rd{Die Benutzeroberfl"ache dient als Frontend f"ur die Radiologie-Suche des KRESHMOI-Systems.}
 
-Im Rahmen der Arbeit werden die beiden Betrachtungsprogrammen f"ur radiologische Datens"atze OsiriX und Afga Impax DS3000 im Bezug auf Funktionsumfang und Bedienung analysiert.
+Im Rahmen der Arbeit werden die beiden Betrachtungsprogrammen f"ur radiologische Datens"atze OsiriX und Afga Impax DS3000 im Bezug auf Funktionsumfang und Bedienung analysiert. 
 
 Es wird der Funktionsumfang des entwickelten Betrachters sowie die Tools zum erstellen der Bild-Query und zur Pr"asentation der Ergebnisse beschrieben.
-Weiters wird erkl"art wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ans"atze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben und im Bezug auf ihre Performance getestet.
+Weiters wird erkl"art wie die Software mit dem HTML5 Frameworks Cappuccino und Pixi.JS umgesetzt wurde und es werden zwei Ans"atze zur lokalen Nachbearbeitung der Bilder mit der Canvas 2D API und mit WebGL beschrieben und im Bezug auf ihre Performance \Rd{getestet}\R{untersucht}.
 
-Von den beiden Verfahren f"uhrte nur das rendering mit WebGL zu einem ausreichend schnellen Ergebniss, welches auch im entwickelten Betrachter implementiert wurde.
+Von den beiden Verfahren f"uhrte nur das \R{r}endering mit WebGL zu einem ausreichend schnellen Ergebniss, welches auch im entwickelten Betrachter implementiert wurde.
 }
 \clearpage
 \pagenumbering{arabic}
